Fix table row alignment

--- a/src/components/Debugger/EventPayload/EventPayload.css
+++ b/src/components/Debugger/EventPayload/EventPayload.css
@@ -195,12 +195,13 @@ details.iglu {
     th {
       font-weight: 400;
       font-size: 0.875rem;
-      line-height: 1.25rem;
       text-align: left;
       word-break: break-all;
 
       position: sticky;
       top: 0;
+
+      padding: calc(0.25rem + 1px) 0;
 
       display: flex;
       flex: 1;
@@ -226,6 +227,8 @@ details.iglu {
       display: flex;
       justify-content: space-between;
       flex: 3;
+
+      line-height: 1.25rem;
 
       > span,
       > time {
